--- a/stories/index.html
+++ b/stories/index.html
@@ -3299,6 +3299,12 @@
       <td><a name="pl0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0006</td>
+      <td><a href="/stories/pl/0006_anansi-i-wiedza_slides.html" target="_blank">Anansi i Wiedza</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/pl/0008_co-robisz_slides.html" target="_blank">Co robisz?</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3311,10 +3317,22 @@
       <td><a name="pl0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/pl/0027_decyzja_slides.html" target="_blank">Decyzja</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/pl/0030_uczucia_slides.html" target="_blank">Uczucia</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pl0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0066</td>
+      <td><a href="/stories/pl/0066_nozibele-i-jej-trzy-włosy_slides.html" target="_blank">Nozibele i jej trzy włosy</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -3327,6 +3345,24 @@
       <td><a href="/stories/pl/0087_lubię-czytać_slides.html" target="_blank">Lubię czytać!</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pl0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0089</td>
+      <td><a href="/stories/pl/0089_khalai-rozmawia-z-roślinami_slides.html" target="_blank">Khalai rozmawia z roślinami</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td><a href="/stories/pl/0095_zama-jest-świetna_slides.html" target="_blank">Zama jest świetna!</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="/stories/pl/0111_dlaczego-hipopotamy-nie-mają-włosów_slides.html" target="_blank">Dlaczego hipopotamy nie mają włosów</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -3347,6 +3383,12 @@
       <td><a name="pl0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0141</td>
+      <td><a href="/stories/pl/0141_kurczak-i-stonoga_slides.html" target="_blank">Kurczak i Stonoga</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0156</td>
       <td><a href="/stories/pl/0156_głodny-krokodyl_slides.html" target="_blank">Głodny krokodyl</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3357,6 +3399,12 @@
       <td><a href="/stories/pl/0231_książka-o-pogodzie_slides.html" target="_blank">Książka o pogodzie</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pl0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0234</td>
+      <td><a href="/stories/pl/0234_andiswa-gwiazda-piłki-nożnej_slides.html" target="_blank">Andiswa - Gwiazda Piłki Nożnej</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0253</td>
@@ -4827,7 +4875,7 @@
       <td>0006</td>
       <td><a href="http://africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0006">ar</a>, <a href="#bn0006">bn</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#it0006">it</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#ar0006">ar</a>, <a href="#bn0006">bn</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#it0006">it</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#pl0006">pl</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -4869,7 +4917,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -4917,7 +4965,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -4971,7 +5019,7 @@
       <td>0089</td>
       <td><a href="http://africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0090</td>
@@ -4989,7 +5037,7 @@
       <td>0095</td>
       <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#pl0095">pl</a>, <a href="#tl0095">tl</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
@@ -5013,7 +5061,7 @@
       <td>0111</td>
       <td><a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -5085,7 +5133,7 @@
       <td>0141</td>
       <td><a href="http://africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#tl0141">tl</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -5205,7 +5253,7 @@
       <td>0234</td>
       <td><a href="http://africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
