--- a/stories/index.html
+++ b/stories/index.html
@@ -3359,6 +3359,12 @@
       <td><a name="pl0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0110</td>
+      <td><a href="/stories/pl/0110_ziarenko-opowieść-wangari-maathai_slides.html" target="_blank">Ziarenko: Opowieść Wangari Maathai</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/pl/0111_dlaczego-hipopotamy-nie-mają-włosów_slides.html" target="_blank">Dlaczego hipopotamy nie mają włosów</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3393,6 +3399,18 @@
       <td><a href="/stories/pl/0156_głodny-krokodyl_slides.html" target="_blank">Głodny krokodyl</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pl0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/pl/0158_kura-i-orlica_slides.html" target="_blank">Kura i Orlica</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0201</td>
+      <td><a href="/stories/pl/0201_ośle-dziecko_slides.html" target="_blank">Ośle Dziecko</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0210</td>
@@ -3435,6 +3453,18 @@
       <td><a href="/stories/pl/0302_ogień_slides.html" target="_blank">Ogień</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pl0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0315</td>
+      <td><a href="/stories/pl/0315_piosenka-sakimy_slides.html" target="_blank">Piosenka Sakimy</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/pl/0324_dzień-w-którym-opuściłem-dom_slides.html" target="_blank">Dzień w którym opuściłem dom</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -5067,7 +5097,7 @@
       <td>0110</td>
       <td><a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -5175,7 +5205,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -5205,7 +5235,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#tl0201">tl</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -5379,7 +5409,7 @@
       <td>0315</td>
       <td><a href="http://africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#no0315">no</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#no0315">no</a>, <a href="#pa0315">pa</a>, <a href="#pl0315">pl</a>, <a href="#tl0315">tl</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
@@ -5397,7 +5427,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
