--- a/stories/pl/0201_ośle-dziecko_slides.html
+++ b/stories/pl/0201_ośle-dziecko_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Perchè gli ippopotami non hanno il pelo. - Global African Storybook</title>
+  <title>Ośle Dziecko - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="perchè-gli-ippopotami-non-hanno-il-pelo." class="slide level1">
-<h1>Perchè gli ippopotami non hanno il pelo.</h1>
+<section id="ośle-dziecko" class="slide level1">
+<h1>Ośle Dziecko</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
-<p>Un giorno, Coniglio stava costeggiando la riva del fiume.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
+<p>Mała dziewczynka była pierwszą, która zobaczyła tajemniczy kształt w oddali.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
-<p>Anche Hippo era lì, passeggiava e mangiava un po' di buona erbetta verde.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
+<p>Gdy dziwny kształt zbliżał się, dziewczynka zrozumiała, że to kobieta w zaawansownej ciąży.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>Hippo non vide che Coniglio era lì e per sbaglio gli pestò la zampa. Coniglio cominciò a urlare. &quot;Ehi tu, Hippo! non vedi che mi stai schiacciando la zampa?&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
+<p>Nieśmiale choć odważnie dziewczynka zbliżyła się do kobiety. &quot;Zostań z nami. Zaopiekujemy się Tobą i dzieckiem&quot; - powiedzieli ludzie z którymi była dziewczynka.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>Hippo si scusò con Coniglio. &quot;Mi dispiace, non ti ho visto. Per favore, perdonami!&quot; Ma coniglio non voleva sentir ragioni e urlò a Hippo &quot;Lo hai fatto apposta! Un giorno vedrai! La pagherai!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
+<p>Nadszedł dzień narodzin dziecka: Pchaj! Przynieście koce i wodę! Pchaaaaaaj!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Coniglio andò a cercare Fuoco e disse &quot; Vai a bruciare Hippo quando esce dall'acqua per mangiare l'erba. Mi ha schiacciato il piede!&quot; Fuoco rispose: &quot;Non c'è problema Coniglio, mio amico. Farò quello che mi hai chiesto.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
+<p>Ale ku zdziwieniu wszystkich ludzi zmiast dziecka, kobieta urodziła osiołka!</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>Più tardi, Hippo stava mangiando l'erba lontano dal fiume quando.. &quot;Whoosh!&quot; Fuoco esplose in mille fiamme. Le fiamme incominciarono a bruciare il pelo di Hippo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
+<p>Ludzie zaczęli się kłócić: &quot;Obiecaliśmy tej kobiecie bezpieczeństwo, jej i jej dziecku&quot; - mówili jedni. &quot;Ale przyniosą nam pecha!&quot; - krzyczeli inni.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>Hippo cominciò a piangere e corse in acqua. Il suo pelo si era bruciato tutto con il fuoco. Hippo continuò a piangere &quot;Il mio pelo si è bruciato col fuoco! Il mio pelo è sparito! Il mio bellissimo pelo!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
+<p>Kobieta poczuła się samotna i nie wiedziała co ze sobą zrobić i co zrobić z tym dziwnym oślim dzieckiem.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>Coniglio era felice che il pelo di Hippo si fosse bruciato. Da quel giorno, per paura del fuoco, gli ippopotami non si allontanano mai dall'acqua.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
+<p>Ostatecznie musiała zaakceptować, że to jest jej dziecko, a ona jest jego matką.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,120 @@
 </section>
 <section class="slide level1">
 
-<h2 id="perchè-gli-ippopotami-non-hanno-il-pelo.-1">Perchè gli ippopotami non hanno il pelo.</h2>
-<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
+<p>Gdyby ośle dziecko nie rosło wszystko było by inne. Ale osiołek rósł i był już tak duży, że nie mieścił się na plecach matki. I choćby nie wiem jak probował zachowywać sie jak ludzie, nie udawało mu się. Przez to matka była często zmęczona i poirytowana. Czasami zmuszała go do pracy dla zwierząt.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
+<p>Zagubienie i złość rosło w osiołku. Do niczego się nie nadawał - według jego matki. Pewnego dnia był tak wściekły, że kopnął matkę!</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
+<p>Osiołek czuł się winny i zaczął uciekać najszybciej jak potrafił i jak najdalej mógł.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
+<p>Kiedy wreszcie się zatrzymał, było już ciemno. &quot;Halo?&quot; - wyszeptał. &quot;Halo?&quot; - odpowiedziało echo. Był sam. Zwinął się w kulkę i zapadł w głęboki sen.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
+<p>Osiołek obudził się i zauważył staruszka, który mu się przyglądał.Gdy spojrzał w oczy staruszka, poczuł dziwne uczucie nadziei.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
+<p>Osiołek zamieszkał ze staruszkiem, który nauczył go jak przeżyć. Osiołek słuchał i uczył się od staruszka, a staruszek od osiołka. Pomagali sobie i często się śmiali.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
+<p>Pewnego ranka , staruszek poprosił osiołka, aby ten zaniósł go na szczyt góry.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
+<p>Wysoko pośród chmur obaj usnęli. Osiołek śnił o matce, która była ciężko chora i wzywała go. Gdy się zbudził...</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
+<p>...chmury zniknęły razem z jego przyjacielem staruszkiem.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
+<p>Osiołek wiedział już co ma robić.</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
+<p>Znalazł matkę samą i płaczącą za synem. Patrzyli na siebie przez dłuższą chwilę i przytulili się tkwiąc w uścisku.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
+<p>Ośle dziecko wraz z matką naczyli się żyć razem i powoli inne rodziny dookoła też zdołały się przyzwyczaić do osiołka.</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ośle-dziecko-1">Ośle Dziecko</h2>
+<strong>Text:</strong> Lindiwe Matshikiza<br> <strong>Illustrations:</strong> Meghan Judge<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/why-hippos-have-no-hair'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/donkey-child'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
